maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:13: error: overloaded method value ecritMessage with alternatives:
  (x$1: Int)Unit <and>
  (x$1: String)Unit
 cannot be applied to (Int, Int)
  }; ecritMessage(posXBiscuit,posYBiscuit) // On a la position du biscuit
     ^